<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top|center"
    android:paddingTop="15dp"
    android:paddingLeft="15dp"
    android:paddingRight="15dp">

    <!-- TODO: Update blank fragment layout -->


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/money_convert"
            android:id="@+id/textView" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/editText"
            android:layout_weight="1"
            android:hint="@string/amount"
            android:backgroundTint="@android:color/holo_green_light" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cad_usd"
            android:id="@+id/switchCurrency"
            android:checked="true"/>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:id="@+id/buttonCalculerCurrency"
        android:background="@android:color/holo_green_light"
        android:paddingLeft="65dp"
        android:paddingRight="65dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="0.00$"
        android:id="@+id/totalCurrencyTextView"
        android:textSize="50dp" />

</LinearLayout>
