<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="enj0y.calculateurdetaxes.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="center"
        android:textSize="35dp"
        android:id="@+id/textView2"
        android:textColor="#000000" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/montantEdit"
        android:hint="@string/amount"
        android:textAlignment="center"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:backgroundTint="@android:color/holo_green_light" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:id="@+id/calcButton"
        android:layout_below="@+id/montantEdit"
        android:layout_marginTop="25dp"
        android:background="@android:color/holo_green_light"
        android:layout_alignRight="@+id/montantEdit"
        android:layout_alignEnd="@+id/montantEdit"
        android:layout_alignLeft="@+id/montantEdit"
        android:layout_alignStart="@+id/montantEdit" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="0.00$"
        android:id="@+id/totalText"
        android:layout_below="@+id/calcButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textSize="60dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Taxes: 0.00$"
        android:id="@+id/taxesText"
        android:layout_below="@+id/tvqView"
        android:layout_alignRight="@+id/tvqView"
        android:layout_alignEnd="@+id/tvqView"
        android:layout_alignLeft="@+id/tvqView"
        android:layout_alignStart="@+id/tvqView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="TPS:"
        android:id="@+id/tpsView"
        android:layout_below="@+id/totalText"
        android:layout_alignLeft="@+id/totalText"
        android:layout_alignStart="@+id/totalText"
        android:layout_alignRight="@+id/totalText"
        android:layout_alignEnd="@+id/totalText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="TVQ:"
        android:id="@+id/tvqView"
        android:layout_below="@+id/tpsView"
        android:layout_alignLeft="@+id/totalText"
        android:layout_alignStart="@+id/totalText"
        android:layout_alignRight="@+id/totalText"
        android:layout_alignEnd="@+id/totalText" />

</RelativeLayout>
